--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -5,3 +5,4 @@
   <input type="password" name="password" required />
   <button type="submit">Login</button>
 </form>
+<a href="/restaurar">Restaurar contraseña</a>
