--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -3,3 +3,7 @@
 <p><b>Last name: </b>{{last_name}}</p>
 <p><b>Email: </b>{{email}}</p>
 <p><b>Age: </b>{{age}}</p>
+
+<form action="/api/session/logout" method="get">
+  <button type="submit">Logout</button>
+</form>
